2011-04-12  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: document console domain, support cross-domain type references.
        https://bugs.webkit.org/show_bug.cgi?id=58240

        * inspector/ConsoleMessage.cpp:
        (WebCore::messageSourceValue):
        (WebCore::messageTypeValue):
        (WebCore::messageLevelValue):
        (WebCore::ConsoleMessage::addToFrontend):
        * inspector/Inspector.json:
        * inspector/ScriptCallFrame.cpp:
        (WebCore::ScriptCallFrame::buildInspectorObject):
        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView.prototype._registerConsoleDomainDispatcher.dispatcher.messageAdded):
        (WebInspector.ConsoleMessage):
        (WebInspector.ConsoleMessage.prototype._populateStackTraceTreeElement):
        (WebInspector.ConsoleMessage.prototype.isEqual):
        * inspector/front-end/NetworkManager.js:
        (WebInspector.NetworkDispatcher.prototype.requestWillBeSent):
        * inspector/generate-inspector-idl:
        * page/Console.h:

2011-04-06  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GStreamer] RTSP playback broken
        https://bugs.webkit.org/show_bug.cgi?id=56930

        Rely on {audio,video}-changed playbin2 signals instead of the
        -tags-changed signals because some media don't provide tags and
        then can trick the media-player to not paint video, for instance.

        Also trigger a video size calculation after the video sink
        negotiated its caps. This is useful in the cases where
        audio-changed signal is emitted but the video sink takes more time
        to negociate caps with its peer.

        This patch also fixes the rtsp manual-test with a new stream url
        which seems to be more permanent than the previous WWDC keynote
        stream.

        * manual-tests/video-rtsp.html: