@@ -43,7 +43,7 @@
             {
                 "name": "inspect",
                 "parameters": [
-                    { "name": "object", "$ref": "RemoteObject" },
+                    { "name": "object", "$ref": "Runtime.RemoteObject" },
                     { "name": "hints", "type": "object" }
                 ]
             },
@@ -132,58 +132,87 @@
     },
     {
         "domain": "Runtime",
-        "types": [],
+        "description": "Runtime domain exposes JavaScript runtime by means of remote evaluation and mirror objects. Evaluation results are returned as mirror object that expose type, string representation and unique identifier that can be used for further object interaction. Original objects are maintained in memory unless they are either explicitly released or are released along with the other objects in their object group.", 
+        "types": [
+            {
+                "id": "RemoteObject",
+                "type": "object",
+                "description": "Mirror object referencing original JavaScript object.",
+                "properties": {
+                    "description": { "type": "string", "description": "String representation of the object." },
+                    "hasChildren": { "type": "integer", "optional": true, "description": "True when this object can be queried for children." },
+                    "objectId": { "type": "string", "optional": true, "description": "Unique object identifier (for non-primitive values)." },
+                    "type": { "type": "string", "enum": ["object", "array", "function", "null", "node", "undefined", "string", "number", "boolean", "error", "regexp", "date"], "description": "Object type." }
+                }
+            },
+            {
+                "id": "RemoteProperty",
+                "type": "object",
+                "description": "Mirror object property.",
+                "properties": {
+                    "name": { "type": "string", "description": "Property name." },
+                    "value": { "$ref": "RemoteObject", "description": "Property value." },
+                    "isGetter": { "type": "string", "description": "True if this property is getter." }
+                }
+            }
+        ],
         "commands": [
             {
                 "name": "evaluate",
                 "parameters": [
-                    { "name": "expression", "type": "string" },
-                    { "name": "objectGroup", "type": "string" },
-                    { "name": "includeCommandLineAPI", "type": "boolean", "optional": true }
+                    { "name": "expression", "type": "string", "description": "Expression to evaluate." },
+                    { "name": "objectGroup", "type": "string", "description": "Symbolic group name that can be used to release multiple objects." },
+                    { "name": "includeCommandLineAPI", "type": "boolean", "optional": true, "description": "Determines whether Command Line API should be available during the evaluation." }
                 ],
                 "returns": [
-                    { "name": "result", "$ref": "RuntimeObject" }
-                ]
+                    { "name": "result", "$ref": "RemoteObject", "description": "Evaluation result." }
+                ],
+                "description": "Evaluate expression on global object."
             },
             {
                 "name": "evaluateOn",
                 "parameters": [
-                    { "name": "objectId", "type": "string" },
-                    { "name": "expression", "type": "string" }
+                    { "name": "objectId", "type": "string", "description": "Identifier of the object to evaluate expression on." },
+                    { "name": "expression", "type": "string", "description": "Expression to evaluate." }
                 ],
                 "returns": [
-                    { "name": "result", "$ref": "RuntimeObject" }
-                ]
+                    { "name": "result", "$ref": "RemoteObject", "description": "Evaluation result." }
+                ],
+                "description": "Evaluate expression on given object using it as <code>this</code>."
             },
             {
                 "name": "getProperties",
                 "parameters": [
-                    { "name": "objectId", "type": "string" },
-                    { "name": "ignoreHasOwnProperty", "type": "boolean" }
+                    { "name": "objectId", "type": "string", "description": "Identifier of the object to return properties for." },
+                    { "name": "ignoreHasOwnProperty", "type": "boolean", "description": "If true, returns properties belonging to any element of the prototype chain." }
                 ],
                 "returns": [
-                    { "name": "result", "type": "array", "items": { "$ref" : "RuntimeProperty"} }
-                ]
+                    { "name": "result", "type": "array", "items": { "$ref" : "RuntimeProperty"}, "description": "Object properties." }
+                ],
+                "description": "Returns properties of a given object."
             },
             {
                 "name": "setPropertyValue",
                 "parameters": [
-                    { "name": "objectId", "type": "string" },
-                    { "name": "propertyName", "type": "string" },
-                    { "name": "expression", "type": "string" }
-                ]
+                    { "name": "objectId", "type": "string", "description": "Identifier of the object to set property on." },
+                    { "name": "propertyName", "type": "string", "description": "Property name to set value for." },
+                    { "name": "expression", "type": "string", "description": "Expression to evaluate." }
+                ],
+                "description": "Makes property with given name equal to the expression evaluation result."
             },
             {
                 "name": "releaseObject",
                 "parameters": [
-                    { "name": "objectId", "type": "string" }
-                ]
+                    { "name": "objectId", "type": "string", "description": "Identifier of the object to release." }
+                ],
+                "description": "Releases remote object with given id."
             },
             {
                 "name": "releaseObjectGroup",
                 "parameters": [
-                    { "name": "objectGroup", "type": "string" }
-                ]
+                    { "name": "objectGroup", "type": "string", "description": "Symbolic object group name." }
+                ],
+                "description": "Releases all remote objects that belong to a given group."
             }
         ]
     },
@@ -204,7 +233,7 @@
                     "repeatCount": { "type": "integer", "optional": true, "description": "Repeat count for repeated messages." },
                     "text": { "type": "string", "description": "Message text." },
                     "networkIdentifier": { "type": "integer", "optional": true, "description": "Identifier of the network request associated with the console message." },
-                    "parameters": { "type": "array", "items": { "$ref": "RuntimeObject" }, "description": "Message parameters in case of the formatted message." },
+                    "parameters": { "type": "array", "items": { "$ref": "Runtime.RemoteObject" }, "description": "Message parameters in case of the formatted message." },
                     "stackTrace": { "type": "array", "optional": true, "items": { "$ref": "CallFrame" }, "description": "Call frames for assert and error messages." }
                 }
             },
@@ -888,7 +917,7 @@
                     { "name": "nodeId", "type": "integer", "description": "Id of the node to resolve." }
                 ],
                 "returns": [
-                    { "name": "object", "$ref": "Object", "description": "JavaScript object wrapper for given node." }
+                    { "name": "object", "$ref": "Runtime.RemoteObject", "description": "JavaScript object wrapper for given node." }
                 ],
                 "description": "Resolves JavaScript node object for given node id."
             }
@@ -1291,8 +1320,8 @@
                 "type": "object",
                 "properties": {
                     "type": { "type": "string",  "enum": ["global", "local", "with", "closure", "catch"], "description": "Scope type." },
-                    "object": { "$ref": "RemoteObject", "description": "Object representing the scope." },
-                    "this": { "$ref": "RemoteObject", "optional": true, "description": "<code>this</code> object for local scope." }
+                    "object": { "$ref": "Runtime.RemoteObject", "description": "Object representing the scope." },
+                    "this": { "$ref": "Runtime.RemoteObject", "optional": true, "description": "<code>this</code> object for local scope." }
                 },
                 "description": "Debugger call frame. Array of call frames form call stack."
             }
@@ -1410,7 +1439,7 @@
                     { "name": "includeCommandLineAPI", "type": "boolean", "optional": true, "description": "Specifies whether command line API should be available to the evaluated expression, defaults to false." }
                 ],
                 "returns": [
-                    { "name": "result", "$ref": "Object", "description": "Object wrapper for the evaluation result." }
+                    { "name": "result", "$ref": "Runtime.RemoteObject", "description": "Object wrapper for the evaluation result." }
                 ],
                 "description": "Evaluates expression on a given call frame."
             }
@@ -1418,11 +1447,11 @@
         "events": [
             {
                 "name": "debuggerWasEnabled",
-                "description": "Fired when debugger gets enabled."
+                "description": "Fired when debugger gets enabled (deprecated)."
             },
             {
                 "name": "debuggerWasDisabled",
-                "description": "Fired when debugger gets disabled."
+                "description": "Fired when debugger gets disabled (deprecated)."
             },
             {
                 "name": "scriptParsed",
